# Nova

./: .gitignore  AGENTS.md  CONTRIBUTING.md  KEYWORDS_AND_LOGIC.md  LICENSE  OPTIMIZATIONS_LOG.md  README.md  ROADMAP.md  __init__.py  _galaxy.py  apply_injection.py  build.bat  build.sh  check_parse.py  ci_84758754703.txt  ci_84758754758.txt  ci_macos.txt  ci_test.py  clean_and_push.ps1  diagnostics.py  diff.txt  extract_stdlib.py  fix_asm.py  fix_codegen_injection.py  fix_stdlib_labels.py  galaxy.cmd  galaxy.py  generate_injections.py  install.ps1  install.py  install.sh  main.py  nova.bat  nova.nv  nova_main.nv  nv_injection.txt  py_injection.txt  pyproject.toml  requirements.txt  runtime.c  (+29 more)
ast/: __init__.py  nodes.py
benchmarks/: bench.nv  bench_str.nv
bootstrap/: README.md  fix_calls.py  main.py  patch.py  port_arm.py  transpile.py  transpile_arm64.py  transpile_x86_64.py
ci-tmp/: hello.nv  selfhost.nv  smoke.nv  test_cc.nv  test_clean.nv  test_read.nv  test_slice.nv  test_sysread.nv
codegen/: __init__.py  generator.py
compiler/: codegen_x86.py  codegen_x86_no_peephole.py  peephole.py  type_checker.py  types.py
docs/: libraries.md  optimization_plan.md
galaxy/: __init__.py  __main__.py
lexer/: tokenizer.py  tokens.py
modules/: __init__.py  loader.py  resolver.py
nova_ast/: nodes.py
optimizer/: __init__.py  optimizer.py
parser/: control_flow.py  expressions.py  parser.py  statements.py
runtime/: builtins.py  types.py  values.py
scratch/: build_linker.py  check_pe.py  debug_asm.py  debug_type.py  debug_type2.py  debug_type3.py  dump_pe.py  (+4 more)
(+214 files in other folders)
