[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "nova-lang"
version = "0.6.0"
description = "Nova Programming Language compiler and Galaxy Package Manager"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"

[project.scripts]
nova = "main:main"
galaxy = "_galaxy:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["galaxy*", "tools*", "nova_ast*", "compiler*", "parser*", "lexer*", "vm*", "modules*"]

[tool.setuptools.package-data]
"*" = ["*.nv", "*.txt", "*.json"]
